# feeding_task

./: .gitignore  CMakeLists.txt  README.md  package.xml  temp
bash/: bowl_grasping.sh  collision_detection.sh  fsm_normal.sh  fsm_skewer.sh  fsm_user.sh  make_swap.sh  object_grasping.sh  voice_synthesis.sh
config/: default.rviz  feeding_config.yaml  trajectory_log.txt
config/voice_response/: skewerNothingAndRetry
include/: anygrasp_publisher.hpp  feeding_utilities.hpp  manipulation_class.hpp  perception_class.hpp
launch/: anygrasp_bowl_handle_grasp.launch  anygrasp_door_handle_grasp.launch  anygrasp_food_item_fetch.launch  anygrasp_multi_objects_grasp.launch  bite_transfer.launch  bowl_handle_grasp.launch  feeding_cycle.launch  food_item_fetch.launch  get_utensil.launch  gpd_grasping_gdb.launch  gpd_grasping_node.launch  initial.launch  load_param.launch  ompl.launch  perception_test.launch  pickup_twice.launch  real_gen3_grasping.launch  skewer_status_check.launch  wait_for_start.launch  wrench_test.launch
launch/fsm/: fsm_normal.launch  fsm_pro.launch  state_machine.launch  voice_recognization.launch
src/fsm/: bak.py  feeding_cycle_state_machine.py  feeding_task_state_machine copy 2.py  feeding_task_state_machine copy.py  feeding_task_state_machine.py  feeding_task_state_machine_temp.py  feeding_task_state_machine_v1.0.py  feeding_task_state_machine_v1.1.py  feeding_task_state_machine_v1.2.py  feeding_task_state_machine_v2.0.py  feeding_task_state_machine_v2.1.py  feeding_task_state_machine_v2.2.py  feeding_task_state_machine_v3.0.py  motion_test.py  nomalize.py  sm_demo.py  test.py  utilities.py
src/functions/: anygrasp_publisher.cpp  bak.cpp  feeding_task.cpp  feeding_utilities.cpp  manipulation_class.cpp  perception_class.cpp
src/nodes/: bite_transfer.cpp  door_handle_grasp.cpp  food_item_fetch.cpp  food_item_fetch_loop.cpp  get_utensil.cpp  initial.cpp  motion_planning_test.cpp  ompl_test.cpp  perception_test.cpp
src/ui/: dict.txt  iat_publish.cpp  speechtotext.py  utilities.py  voice_monitor.py  voice_recognization.cpp
src/utilities/: bak.py  skewer_checker.py  skewer_checker_client.py  stop_client.py  test.py  wait_for_start.py  wait_for_start_client.py
srv/: SkewerStatusCheck.srv  WaitForStart.srv
