<?xml version="1.0"?>
<package format="2">
  <name>feeding_task</name>
  <version>0.0.0</version>
  <description>The feeding_task package</description>

  <maintainer email="zing@example.com">Zing</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kortex_motion_planning</build_depend>
  <build_depend>anygrasp_generation</build_depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_support</depend>
  <depend>tesseract_urdf</depend>
  <depend>tesseract_kinematics</depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
  </export>
</package>